tests/rosetta/out/Swift/chat-server.error
run error: exit status 1
/tmp/TestMochiToSwiftchat-server4125349705/001/main.swift:3:25: error: cannot assign value of type '[Any]' to type '[String]'
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:57:11Z
 2 | func removeName(_ names: [String], _ name: String) -> [String] {
 3 |     var out: [String] = [Any]()
   |                         |- error: cannot assign value of type '[Any]' to type '[String]'
   |                         `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
 4 |     for n in names {
 5 |         if n != name {

/tmp/TestMochiToSwiftchat-server4125349705/001/main.swift:12:29: error: cannot assign value of type '[Any]' to type '[String]'
10 | }
11 | func main() {
12 |     var clients: [String] = [Any]()
   |                             |- error: cannot assign value of type '[Any]' to type '[String]'
   |                             `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
13 |     func broadcast(_ msg: String) {
14 |         print(msg)
