tests/rosetta/out/Swift/chat-server.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:57:11Z
func removeName(_ names: [String], _ name: String) -> [String] {
    var out: [String] = [Any]()
    for n in names {
        if n != name {
            out = out + [n]
        }
    }
    return out
}
func main() {
    var clients: [String] = [Any]()
    func broadcast(_ msg: String) {
        print(msg)
    }
    func add(_ name: String) {
        clients = clients + [name]
        broadcast("+++ \"" + name + "\" connected +++\n")
    }
    func send(_ name: String, _ msg: String) {
        broadcast(name + "> " + msg + "\n")
    }
    func remove(_ name: String) {
        clients = removeName(clients, name)
        broadcast("--- \"" + name + "\" disconnected ---\n")
    }
    add("Alice")
    add("Bob")
    send("Alice", "Hello Bob!")
    send("Bob", "Hi Alice!")
    remove("Bob")
    remove("Alice")
    broadcast("Server stopping!\n")
}
main()
